--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -7,3 +7,4 @@ jobs:
       - uses: actions/labeler@v2
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          sync-labels: true
