--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 substrate_node_setup: true
+substrate_node_configure: true
 # can set to 'latest'
 substrate_node_version: 0.1.0
 substrate_node_source: "https://github.com/digitalnativeinc/standard-substrate/releases/download/{{ substrate_node_version }}/{{ substrate_node_bin_name }}-{{ ansible_system | lower }}-{{ ansible_architecture }}"
