--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -28,6 +28,11 @@
         mode: a+x
         backup: true
       register: release_download
+
+    - name: Substrate Install | Output file
+      debug:
+        msg: "{{ release_download.backup_file }}"
+      when: release_download.changed
   when:
     - '".tar.gz" not in substrate_node_source'
 
@@ -44,11 +49,16 @@
 
     - name: Substrate Install | Archive details
       debug:
-        var: release_download
+        var: release_download.dest
+
+    - name: Substrate Install | Move file
+      ansible.builtin.copy:
+        src: "{{release_download.dest}}/plasm"
+        dest: "{{ substrate_node_bin_dir }}/{{ substrate_node_bin_name }}"
+        owner: "{{ substrate_node_user }}"
+        group: "{{ substrate_node_group }}"
+        remote_src: yes
+        backup: true
+        # mode: '0644'
   when:
     - '".tar.gz" in substrate_node_source'
-
-- name: Substrate Install | Output file
-  debug:
-    msg: "{{ release_download.backup_file }}"
-  when: release_download.changed
