--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -29,7 +29,7 @@
         backup: true
       register: release_download
 
-    - name: Substrate Install | Output file
+    - name: Substrate Install | Backup file location
       debug:
         msg: "{{ release_download.backup_file }}"
       when: release_download.changed
@@ -38,13 +38,21 @@
 
 - name: Substrate Install | Archive release download
   block:
+    - name: Substrate Install | Create tmp dir
+      ansible.builtin.file:
+        path: "/tmp/{{ substrate_node_bin_name }}"
+        state: directory
+        mode: "0755"
+      register: tmp_folder
+
     - name: Substrate Install | Unarchive a file that needs to be downloaded
       ansible.builtin.unarchive:
         src: "{{ substrate_node_source }}"
-        dest: "/tmp/"
+        dest: "{{ tmp_folder.path }}/"
         remote_src: yes
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
+        list_files: true
       register: release_download
 
     - name: Substrate Install | Archive details
@@ -53,16 +61,20 @@
 
     - name: Substrate Install | Move file
       ansible.builtin.copy:
-        src: "{{release_download.dest}}/plasm"
+        src: "{{ release_download.dest }}/plasm"
         dest: "{{ substrate_node_bin_dir }}/{{ substrate_node_bin_name }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         remote_src: yes
         backup: true
         mode: a+x
-        # mode: '0644'
 
-    - name: Substrate Install | Output file
+    - name: Recursively remove directory
+      ansible.builtin.file:
+        path: /etc/foo
+        state: absent
+
+    - name: Substrate Install | Backup file location
       debug:
         msg: "{{ release_download.backup_file }}"
       when: release_download.changed
