--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -39,7 +39,7 @@
     port: "{{ item }}"
     timeout: 10
   when:
-    - "{{ item }}"
+    - item
   with_items:
     - "{{ substrate_node_p2p_port }}"
     - "{{ substrate_node_rpc_port }}"
