--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -16,9 +16,8 @@
     enabled: yes
 
 - name: Substrate Configure | Wait for service start
-  wait_for:
-    port: "{{ substrate_node_p2p_port }}"
-    timeout: 10
+  pause:
+    seconds: 5
 
 - name: Substrate Configure | Get service invocation ID
   command: "systemctl show -p InvocationID --value {{ substrate_node_bin_name }}"
