--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -38,26 +38,15 @@
 
 - name: Substrate Install | Archive release download
   block:
-    - name: Substrate Install | Create tmp dir
-      ansible.builtin.file:
-        path: "/tmp/{{ substrate_node_bin_name }}"
-        state: directory
-        mode: "0755"
-      register: tmp_folder
-
     - name: Substrate Install | Unarchive a file that needs to be downloaded
       ansible.builtin.unarchive:
         src: "{{ substrate_node_source }}"
-        dest: "{{ tmp_folder.path }}/"
+        dest: "/tmp"
         remote_src: yes
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         list_files: true
       register: release_download
-
-    - name: Substrate Install | Archive details
-      debug:
-        msg: "{{ release_download.files[0] }}"
 
     - name: Substrate Install | Move file
       ansible.builtin.copy:
@@ -69,11 +58,6 @@
         backup: true
         mode: a+x
       register: release_move
-
-    - name: Recursively remove directory
-      ansible.builtin.file:
-        path: /etc/foo
-        state: absent
 
     - name: Substrate Install | Backup file location
       debug:
