--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -41,7 +41,7 @@
     - name: Substrate Install | Unarchive a file that needs to be downloaded
       ansible.builtin.unarchive:
         src: "{{ substrate_node_source }}"
-        dest: "/tmp"
+        dest: "/tmp/"
         remote_src: yes
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
