--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -17,17 +17,51 @@
     substrate_node_version: "{{ release.tag }}"
   when: substrate_node_version == 'latest'
 
-- name: Substrate Install | Download release
-  get_url:
-    url: "{{ substrate_node_source }}"
-    dest: "{{ substrate_node_bin_dir }}/{{ substrate_node_bin_name }}"
-    owner: "{{ substrate_node_user }}"
-    group: "{{ substrate_node_group }}"
-    mode: a+x
-    backup: true
-  register: release_download
+- name: Substrate Install | Binary release download
+  block:
+    - name: Substrate Install | Download release
+      get_url:
+        url: "{{ substrate_node_source }}"
+        dest: "{{ substrate_node_bin_dir }}/{{ substrate_node_bin_name }}"
+        owner: "{{ substrate_node_user }}"
+        group: "{{ substrate_node_group }}"
+        mode: a+x
+        backup: true
+      register: release_download
 
-- name: Substrate Install | Output file
-  debug:
-    msg: "{{ release_download.backup_file }}"
-  when: release_download.changed
+    - name: Substrate Install | Backup file location
+      debug:
+        msg: "{{ release_download.backup_file }}"
+      when: release_download.changed
+  when:
+    - '".tar.gz" not in substrate_node_source'
+
+- name: Substrate Install | Archive release download
+  block:
+    - name: Substrate Install | Unarchive a file that needs to be downloaded
+      ansible.builtin.unarchive:
+        src: "{{ substrate_node_source }}"
+        dest: "/tmp/"
+        remote_src: yes
+        owner: "{{ substrate_node_user }}"
+        group: "{{ substrate_node_group }}"
+        list_files: true
+      register: release_download
+
+    - name: Substrate Install | Move file
+      ansible.builtin.copy:
+        src: "{{ release_download.dest }}{{ release_download.files[0] }}"
+        dest: "{{ substrate_node_bin_dir }}{{ substrate_node_bin_name }}"
+        owner: "{{ substrate_node_user }}"
+        group: "{{ substrate_node_group }}"
+        remote_src: yes
+        backup: true
+        mode: a+x
+      register: release_move
+
+    - name: Substrate Install | Backup file location
+      debug:
+        msg: "{{ release_move.backup_file }}"
+      when: release_move.changed
+  when:
+    - '".tar.gz" in substrate_node_source'
