--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,10 +1,10 @@
-on: pull_request_target
+on: pull_request
 
 jobs:
   label:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/labeler@v2
+      - uses: actions/labeler@v3.0.2
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           sync-labels: true
