--- a/.github/workflows/publish-galaxy.yml
+++ b/.github/workflows/publish-galaxy.yml
@@ -8,7 +8,10 @@ jobs:
   release:
     runs-on: ubuntu-20.04
     steps:
-      - name: galaxy
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Galaxy Publish
         uses: robertdebock/galaxy-action@1.1.0
         with:
           galaxy_api_key: ${{ secrets.GALAXY_API_KEY }}
