--- a/.github/workflows/publish-galaxy.yml
+++ b/.github/workflows/publish-galaxy.yml
@@ -3,7 +3,7 @@ name: Publish to Ansible Galaxy
 
 on:
   release:
-    types: [created, edited, published, released]
+    types: [released]
 jobs:
   release:
     runs-on: ubuntu-20.04
