--- a/.github/workflows/publish-galaxy.yml
+++ b/.github/workflows/publish-galaxy.yml
@@ -12,6 +12,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Galaxy Publish
-        uses: robertdebock/galaxy-action@1.1.0
+        uses: 0x022b/galaxy-role-import-action@v1
         with:
           galaxy_api_key: ${{ secrets.GALAXY_API_KEY }}
