--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -28,24 +28,38 @@
   pause:
     seconds: 5
 
-- name: Substrate Configure | Get service invocation ID
-  command: "systemctl show -p InvocationID --value {{ substrate_node_bin_name }}"
-  register: systemd_status
+- block:
+    - name: Substrate Configure | Get service invocation ID
+      command: "systemctl show -p InvocationID --value {{ substrate_node_bin_name }}"
+      register: systemd_status
 
-- name: Substrate Configure | Get logs
-  command: |
-    journalctl _SYSTEMD_INVOCATION_ID="{{ systemd_status.stdout }}" + INVOCATION_ID="{{ systemd_status.stdout }}"
-  register: service_logs
-  ignore_errors: true
-  failed_when:
-    - 'service_logs.stderr != ""'
+    - name: Substrate Configure | Get logs
+      command: |
+        journalctl _SYSTEMD_INVOCATION_ID="{{ systemd_status.stdout }}" + INVOCATION_ID="{{ systemd_status.stdout }}"
+      register: service_logs
+      ignore_errors: true
+      failed_when:
+        - 'service_logs.stderr != ""'
 
-- name: Substrate Configure | Service stdout
-  debug:
-    msg: "{{ service_logs.stdout }}"
-  failed_when:
-    - '"Discovered new external address for our node" not in service_logs.stdout'
-    - '"error" in service_logs.stdout'
+    - name: Substrate Configure | Service stdout
+      debug:
+        msg: "{{ service_logs.stdout }}"
+      failed_when:
+        - '"Discovered new external address for our node" not in service_logs.stdout'
+        - '"error" in service_logs.stdout'
+  when: substrate_node_logging == "syslog"
+
+- block:
+    - name: Substrate Configure | Cat
+      command: "tail -n 100 {{ item }}"
+      with_items:
+        - /var/log/{{ substrate_node_bin_name }}/stderr.log
+      register: service_logs
+      failed_when:
+        - '"Discovered new external address for our node" not in service_logs.stdout'
+        - '"error" in service_logs.stdout'
+
+  when: substrate_node_logging == "file"
 
 - name: Substrate Configure | Verify ports are open
   wait_for:
