--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,18 @@
 ---
-- name: Substrate | Perform setup
-  import_tasks: install.yml
-  when: substrate_node_setup
+- name: Substrate Main | SELinux prerequisites
+  import_tasks: selinux.yml
+  when: substrate_node_selinux_enabled | bool
 
-- name: Substrate | Perform configuration
+- name: Substrate Main | Perform setup
+  import_tasks: install.yml
+  when: substrate_node_setup | bool
+
+- name: Substrate Main | Perform configuration
   import_tasks: configure.yml
-  when: substrate_node_configure
+  when: substrate_node_configure | bool
+
+- name: Substrate Main| Configure logrotate for node
+  include_tasks: "{{ role_path }}/tasks/logrotate.yml"
+  when:
+    - substrate_node_logrotate_conf_enable | bool
+    - substrate_node_logging == "file"
