--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,7 +3,9 @@ substrate_node_setup: true
 substrate_node_configure: true
 # example: substrate_node_version: 'latest'
 substrate_node_version: 0.1.0
-substrate_node_source: "https://github.com/digitalnativeinc/standard-substrate/releases/download/{{ substrate_node_version }}/{{ substrate_node_bin_name }}-{{ ansible_system | lower }}-{{ ansible_architecture }}"
+substrate_node_source:
+  "https://github.com/digitalnativeinc/standard-substrate/releases/download/\
+  {{ substrate_node_version }}/{{ substrate_node_bin_name }}-{{ ansible_system | lower }}-{{ ansible_architecture }}"
 substrate_node_releases: "https://api.github.com/repos/digitalnativeinc/standard-substrate/releases/latest"
 substrate_node_selinux_enabled: false
 substrate_node_bin_dir: "/usr/local/bin/"
