--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,9 @@
 ---
-substrate_node_setup: true
+substrate_node_preflight: true
+substrate_node_install: true
 substrate_node_configure: true
+substrate_node_postflight: true
+substrate_node_operations: true
 # example: substrate_node_version: 'latest'
 substrate_node_version: 0.1.0
 substrate_node_source:
@@ -18,9 +21,9 @@ substrate_node_data_dir: "/data"
 substrate_node_logging: "syslog"
 substrate_node_use_root: true
 substrate_node_use_existing_user: true
-# example: substrate_node_pruning: "archive" | "constrained"
 # substrate_node_identity: "alice" | "bob"
 substrate_node_identity: ""
+# example: substrate_node_pruning: "archive" | "constrained"
 substrate_node_pruning: ""
 substrate_node_user: "standard"
 substrate_node_group: "standard"
@@ -32,7 +35,7 @@ substrate_node_p2p_port: 30333
 substrate_node_rpc_port: 9933
 substrate_node_rpc_external: false
 # example: substrate_node_rpc_methods: "Safe" | "Unsafe" | "Auto"
-substrate_node_rpc_methods: ""
+substrate_node_rpc_methods: "Auto"
 # example: substrate_node_rpc_cors: "localhost,https://polkadot.js.org" | "all"
 substrate_node_rpc_cors: ""
 substrate_node_ws_port: 9944
@@ -53,3 +56,6 @@ substrate_node_logrotate_conf:
     - notifempty
     - create 0644 {{ substrate_node_user }} adm
     - sharedscripts
+
+# INTERNAL VARIABLES
+_substrate_node_bin_path: "{{ substrate_node_bin_dir }}{{ substrate_node_bin_name }}"
