--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,70 +1,116 @@
 ---
-- name: Substrate Install | Install dependencies
-  include_tasks: "{{ ansible_os_family }}.yml"
-
-- name: Substrate Install | Get latest release of a public repository
-  become: false
-  community.general.github_release:
-    user: digitalnativeinc
-    repo: standard-substrate
-    action: latest_release
-  when: substrate_node_version == 'latest'
-  register: release
-  delegate_to: 127.0.0.1
-
-- name: Substrate Install | Get fact for release
-  set_fact:
-    substrate_node_version: "{{ release.tag }}"
-  when: substrate_node_version == 'latest'
-
-- name: Substrate Install | Binary release download
+- name: Substrate Install | Download source
   block:
-    - name: Substrate Install | Download release
-      get_url:
-        url: "{{ substrate_node_source }}"
-        dest: "{{ substrate_node_bin_dir }}/{{ substrate_node_bin_name }}"
-        owner: "{{ substrate_node_user }}"
-        group: "{{ substrate_node_group }}"
-        mode: a+x
-        backup: true
-      register: release_download
-      until: release_download is succeeded
-      retries: 5
-      delay: 2
+    - name: Substrate Install | Pull Latest tag
+      block:
+        - name: Substrate Install | Get latest release of a public repository
+          become: false
+          community.general.github_release:
+            user: digitalnativeinc
+            repo: standard-substrate
+            action: latest_release
+          register: release
+          delegate_to: 127.0.0.1
 
-    - name: Substrate Install | Backup file location
-      debug:
-        msg: "{{ release_download.backup_file }}"
-      when: release_download.backup_file is defined
+        - name: Substrate Install | Set fact for release
+          set_fact:
+            substrate_node_version: "{{ release.tag }}"
+      when:
+        - substrate_node_version == 'latest'
+
+    - name: Substrate Install | Binary release download
+      block:
+        - name: Substrate Install | Download release
+          get_url:
+            url: "{{ substrate_node_source }}"
+            dest: "{{ _substrate_node_bin_path }}"
+            owner: "{{ substrate_node_user }}"
+            group: "{{ substrate_node_group }}"
+            mode: a+x
+            backup: true
+          register: release_install
+          until: release_install is succeeded
+          retries: 5
+          delay: 2
+      when:
+        - '".tar.gz" not in substrate_node_source'
+
+    - name: Substrate Install | Archive release download
+      block:
+        - name: Substrate Install | Unarchive a file that needs to be downloaded
+          ansible.builtin.unarchive:
+            src: "{{ substrate_node_source }}"
+            dest: /tmp
+            remote_src: true
+            owner: "{{ substrate_node_user }}"
+            group: "{{ substrate_node_group }}"
+            list_files: true
+          register: release_install
+
+        - name: Substrate Install | Move unarchived file
+          ansible.builtin.copy:
+            src: "/tmp/{{ release_install.files[0] }}"
+            dest: "{{ _substrate_node_bin_path }}"
+            remote_src: true
+            owner: "{{ substrate_node_user }}"
+            group: "{{ substrate_node_group }}"
+            mode: a+x
+            backup: true
+          register: release_install
+      when:
+        - '".tar.gz" in substrate_node_source'
   when:
-    - '".tar.gz" not in substrate_node_source'
+    - '"http" in substrate_node_source'
 
-- name: Substrate Install | Archive release download
+- name: Substrate Install | Push source
   block:
-    - name: Substrate Install | Unarchive a file that needs to be downloaded
-      ansible.builtin.unarchive:
-        src: "{{ substrate_node_source }}"
-        dest: "/tmp/"
-        remote_src: true
-        owner: "{{ substrate_node_user }}"
-        group: "{{ substrate_node_group }}"
-        list_files: true
-      register: release_download
+    - name: Substrate Install | Binary release push
+      block:
+        - name: Copy file with owner and permissions
+          ansible.builtin.copy:
+            src: "{{ substrate_node_source }}"
+            dest: "{{ _substrate_node_bin_path }}"
+            owner: "{{ substrate_node_user }}"
+            group: "{{ substrate_node_group }}"
+            mode: a+x
+          register: release_install
+      when:
+        - '".tar.gz" not in substrate_node_source'
 
-    - name: Substrate Install | Move file
-      ansible.builtin.copy:
-        src: "{{ release_download.dest }}{{ release_download.files[0] }}"
-        dest: "{{ substrate_node_bin_dir }}{{ substrate_node_bin_name }}"
-        owner: "{{ substrate_node_user }}"
-        group: "{{ substrate_node_group }}"
-        remote_src: true
-        backup: true
-        mode: a+x
-      register: release_move
+    - name: Substrate Install | Archive release push
+      block:
+        - name: Substrate Install | Unarchive a file that needs to be downloaded
+          ansible.builtin.unarchive:
+            src: "{{ substrate_node_source }}"
+            dest: /tmp
+            remote_src: false
+            owner: "{{ substrate_node_user }}"
+            group: "{{ substrate_node_group }}"
+            list_files: true
+          register: release_install
 
-    - name: Substrate Install | Backup file location
-      debug:
-        msg: "{{ release_move.backup_file }}"
-      when: release_move.changed
+        - name: Substrate Install | List unarchived files
+          debug:
+            var: release_install.files
+
+        - name: Substrate Install | Move unarchived file
+          ansible.builtin.copy:
+            src: "/tmp{{ elease_push.files[0] }}"
+            dest: "{{ _substrate_node_bin_path }}"
+            remote_src: true
+            owner: "{{ substrate_node_user }}"
+            group: "{{ substrate_node_group }}"
+            mode: a+x
+            backup: true
+          register: release_install
+      when:
+        - '".tar.gz" in substrate_node_source'
   when:
-    - '".tar.gz" in substrate_node_source'
+    - '"http" not in substrate_node_source'
+
+- name: Substrate Install | Backup file location
+  debug:
+    msg: "{{ release_move.backup_file }}"
+  when:
+    - release_install.backup_file is defined
+    - release_install.backup_file != ""
