--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,18 +1,26 @@
 ---
-- name: Substrate Main | SELinux prerequisites
-  import_tasks: selinux.yml
-  when: substrate_node_selinux_enabled | bool
+- name: Substrate Main | Preflight tasks
+  import_tasks: preflight.yml
+  when: substrate_node_preflight | bool
 
 - name: Substrate Main | Perform setup
   import_tasks: install.yml
-  when: substrate_node_setup | bool
+  when: substrate_node_install | bool
 
 - name: Substrate Main | Perform configuration
   import_tasks: configure.yml
   when: substrate_node_configure | bool
 
 - name: Substrate Main| Configure logrotate for node
-  include_tasks: "{{ role_path }}/tasks/logrotate.yml"
+  import_tasks: logrotate.yml
   when:
     - substrate_node_logrotate_conf_enable | bool
     - substrate_node_logging == "file"
+
+- name: Substrate Main | Postflight tasks
+  import_tasks: postflight.yml
+  when: substrate_node_postflight | bool
+
+- name: Substrate Main | Operations tasks
+  import_tasks: operations.yml
+  when: substrate_node_operations | bool
