--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -3,22 +3,31 @@
   block:
     - name: Substrate Install | Pull Latest tag
       block:
-        - name: Substrate Install | Install github3.py - required for community.general.github_release
-          pip:
-            name: github3
-            version: 2.0.0
+        # - name: Substrate Install | Install github3.py - required for community.general.github_release
+        #   pip:
+        #     name: github3
+        #     version: 2.0.0
 
-        - name: Substrate Install | Get latest release of a public repository
-          become: false
-          community.general.github_release:
-            user: digitalnativeinc
-            repo: standard-substrate
-            action: latest_release
-          register: release
+        # - name: Substrate Install | Get latest release of a public repository
+        #   become: false
+        #   community.general.github_release:
+        #     user: digitalnativeinc
+        #     repo: standard-substrate
+        #     action: latest_release
+        #   register: release
+        #   delegate_to: 127.0.0.1
+
+        - name: Substrate Install | Get repository latest release version
+          uri:
+            url: "{{ substrate_node_releases }}"
+            # return_content: true
+            method: GET
+            status_code: 200
+          register: latest_version
 
         - name: Substrate Install | Set fact for release
           set_fact:
-            substrate_node_latest_version: "{{ release.tag }}"
+            substrate_node_latest_version: "{{ latest_version.json.tag_name }}"
       when:
         - substrate_node_version == 'latest'
 
