--- a/tasks/preflight.yml
+++ b/tasks/preflight.yml
@@ -37,3 +37,32 @@
   when:
     - ansible_os_family == 'Debian'
     - substrate_node_selinux_enabled
+
+- name: Substrate Logrotate | Setup logrotate
+  block:
+    - name: Substrate Logrotate | Install logrotate (Alpine Linux)
+      ansible.builtin.package:
+        name: logrotate
+        state: present
+
+    - name: Substrate Logrotate | Set up logrotate (SLES)
+      block:
+        - name: Substrate Logrotate | Configure logrotate repository (SLES)
+          zypper_repository:
+            repo: https://download.opensuse.org/repositories/openSUSE:Leap:42.1/standard/openSUSE:Leap:42.1.repo
+
+        - name: Substrate Logrotate | Install Logrotate (SLES)
+          zypper:
+            name: logrotate
+            state: present
+      when: ansible_facts['os_family'] == "Suse"
+
+    - name: Substrate Logrotate | Create logrotate config
+      template:
+        src: logrotate.j2
+        dest: "/etc/logrotate.d/{{ substrate_node_bin_name }}"
+        mode: 0644
+      notify: Run Logrotate
+  when:
+    - substrate_node_logrotate_conf_enable | bool
+    - substrate_node_logging == "file"
