--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -17,27 +17,34 @@
     mode: "0644"
   register: node_startup
 
+- name: Substrate Configure | Rotate logs before
+  command: "logrotate -f /etc/logrotate.d/{{ substrate_node_bin_name }}"
+  when: (node_startup.changed or release_install.changed) and
+    (substrate_node_logrotate_conf_enable | bool and substrate_node_logging == "file")
+
 - name: Substrate Configure | Service start
   ansible.builtin.systemd:
     name: "{{ substrate_node_bin_name }}"
     daemon_reload: true
-    state: started
+    # state: started
+    state: "{{ restarted if (node_startup.changed or release_install.changed) else started }}"
     enabled: true
   register: node_start
 
-- name: Substrate Configure | Service restart if needed
-  ansible.builtin.systemd:
-    name: "{{ substrate_node_bin_name }}"
-    daemon_reload: true
-    state: restarted
-    enabled: true
-  when: node_startup.changed or release_install.changed
-  register: node_restart
+# - name: Substrate Configure | Service restart if needed
+#   ansible.builtin.systemd:
+#     name: "{{ substrate_node_bin_name }}"
+#     daemon_reload: true
+#     state: restarted
+#     enabled: true
+#   when: node_startup.changed or release_install.changed
+#   register: node_restart
 
 - name: Substrate Configure | Wait for service start/restart
   pause:
     seconds: 10
-  when: node_start.changed or node_restart.changed
+  # when: node_start.changed or node_restart.changed
+  when: node_start.changed
 
 - block:
     - name: Substrate Configure | Get service invocation ID
