--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -27,8 +27,8 @@
             force: true
             mode: a+x
             backup: true
-          register: release_install
-          until: release_install is succeeded
+          register: _release_binary_download
+          until: _release_binary_download is succeeded
           retries: 5
           delay: 2
       when:
@@ -44,18 +44,22 @@
             owner: "{{ substrate_node_user }}"
             group: "{{ substrate_node_group }}"
             list_files: true
-          register: release_install
+          register: _unarchive_output
+
+        - name: Substrate Install | List unarchived files
+          debug:
+            var: _unarchive_output.files
 
         - name: Substrate Install | Move unarchived file
           ansible.builtin.copy:
-            src: "/tmp/{{ release_install.files[0] }}"
+            src: "/tmp/{{ _unarchive_output.files[0] }}"
             dest: "{{ _substrate_node_bin_path }}"
             remote_src: true
             owner: "{{ substrate_node_user }}"
             group: "{{ substrate_node_group }}"
             mode: a+x
             backup: true
-          register: release_install
+          register: _release_archive_download
       when:
         - '".tar.gz" in substrate_node_source'
   when:
@@ -73,7 +77,8 @@
             group: "{{ substrate_node_group }}"
             mode: a+x
             force: true
-          register: release_install
+            backup: true
+          register: _release_binary_push
       when:
         - '".tar.gz" not in substrate_node_source'
 
@@ -87,15 +92,15 @@
             owner: "{{ substrate_node_user }}"
             group: "{{ substrate_node_group }}"
             list_files: true
-          register: release_install
+          register: _unarchive_output
 
         - name: Substrate Install | List unarchived files
           debug:
-            var: release_install.files
+            var: _unarchive_output.files
 
         - name: Substrate Install | Move unarchived file
           ansible.builtin.copy:
-            src: "/tmp{{ elease_push.files[0] }}"
+            src: "/tmp{{ _unarchive_output.files[0] }}"
             dest: "{{ _substrate_node_bin_path }}"
             remote_src: true
             owner: "{{ substrate_node_user }}"
@@ -103,8 +108,24 @@
             mode: a+x
             backup: true
             force: true
-          register: release_install
+          register: _release_archive_push
       when:
         - '".tar.gz" in substrate_node_source'
   when:
     - '"http" not in substrate_node_source'
+
+- debug:
+    var: _release_binary_download
+
+- name: Substrate Install | Set fact
+  set_fact:
+    _binary_updated: true
+    _backup_path: "{{ _release_'item[0]'_'item[1]'.backup_file }}"
+  when: "_release_{{ item[0] }}_{{ item[1] }}.changed"
+  loop: "{{ ['archive', 'binary'] | product(['download', 'push']) | list }}"
+
+- debug:
+    var: _binary_updated
+
+- debug:
+    var: _backup_path
