--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -6,7 +6,7 @@
     owner: "{{ substrate_node_user }}"
     group: adm
     mode: "0640"
-  when: substrate_node_logging == 'file'
+  when: substrate_node_logging | lower == 'file'
 
 - name: Substrate Configure | Systemd Template file
   template:
@@ -21,7 +21,7 @@
   command: "logrotate -f /etc/logrotate.d/{{ substrate_node_bin_name }}"
   when:
     - (_node_startup.changed or _binary_updated is defined)
-    - (substrate_node_logrotate_conf_enable | bool and substrate_node_logging == "file")
+    - (substrate_node_logrotate_conf_enable | bool and substrate_node_logging | lower == "file")
 
 - name: Substrate Configure | Service start
   ansible.builtin.systemd:
@@ -64,7 +64,7 @@
       failed_when:
         - '"Discovered new external address for our node" not in service_logs.stdout'
         - '"error" in service_logs.stdout'
-  when: substrate_node_logging == "syslog"
+  when: substrate_node_logging | lower == "syslog"
 
 - block:
     - name: Substrate Configure | Get logs
@@ -83,7 +83,7 @@
       with_items: "{{ service_logs['results'] }}"
       loop_control:
         label: "{{ item.item }}"
-  when: substrate_node_logging == "file"
+  when: substrate_node_logging | lower == "file"
 
 - name: Substrate Configure | Verify ports are open
   wait_for:
